correct file name

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
                     <button type="button" onclick="showPage('contact')" class="btn shadow-none focus-ring">hire
                         me</button>
 
-                    <a href="/assits//Resume(final).pdf" target="_blank"
-                        class="btn shadow-none focus-ring ml-4">Download CV</a>
+                    <a href="assits/Resume(final).pdf" target="_blank" class="btn shadow-none focus-ring ml-4">Download CV</a>
                 </div>
                 <div class="col-md-5">
                     <div class="image p-4">
